# xnode-manager

./: README.md  flake.nix
.github/workflows/: OSkexec.yml  cache.yml  installer.yml
example/: flake.nix
nix/: container-module.nix  nixos-module.nix  nixos-test.nix  package.nix  reverse-proxy-module.nix
os/: disko-config.nix  flake.nix  install.sh  kexec.nix
os/installer/: config.nix  flake.nix  install.sh  iso.nix  kexec.nix  minimal.nix
os/kexec-installer/: flake.nix  install.sh  kexec.nix
rust-app/: .gitignore  Cargo.toml
rust-app/src/: main.rs
rust-app/src/auth/: handlers.rs  mod.rs  models.rs  utils.rs
rust-app/src/config/: handlers.rs  mod.rs  models.rs
rust-app/src/file/: handlers.rs  mod.rs  models.rs
rust-app/src/info/: handlers.rs  mod.rs  models.rs
rust-app/src/os/: handlers.rs  mod.rs  models.rs
rust-app/src/process/: handlers.rs  mod.rs  models.rs
rust-app/src/processes/: handlers.rs  mod.rs  models.rs
rust-app/src/request/: handlers.rs  mod.rs  models.rs
rust-app/src/resource_usage/: handlers.rs  mod.rs  models.rs
rust-app/src/usage/: handlers.rs  mod.rs  models.rs
rust-app/src/utils/: command.rs  env.rs  error.rs  fs.rs  keccak.rs  mod.rs  output.rs  string.rs
