[package]
name = "xnode-manager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.0"
env_logger = "0.11.6"
ethsign = "0.9.0"
hex = "0.4.3"
keccak-hash = "0.11.0"
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.0"
uuid = "1.0"
